--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+
+:root{
+  --mainDark:#3a4040;
+  --mainGrey:rgba(109,109,109);
+  --mainLightGrey:rgba(172,172,172);
+  --mainWhite:#fff;
+  --mainBlue:#007bff;
+}
 .App {
   text-align: center;
 }
